tests/ui/fmt/unicode-format-string-missing-parameter-70381.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/unicode-format-string-missing-parameter-70381.rs:5:14
   |
LL |   println!("ยก{}")
   |              ^^

error: aborting due to 1 previous error

